tp3/back-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: my-namespace
spec:
  selector:
    app: backend-deployment
  ports:
  - port: 8080
    targetPort: 8080
