tp3/front-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: my-namespace
spec:
  type: NodePort
  selector:
    app: frontend-deployment
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30000
